Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-36504

[Durability]: SyncWrite update incrementing the cbstats' vb-details:ops_update field by 2

    XMLWordPrintable

Details

    • Untriaged
    • Centos 64-bit
    • No
    • KV-Engine Mad-Hatter GA

    Description

      Build: 6.5.0-4558.

      Scenario:

      • 4 node cluster, Couchbase-bucket (replica=0)
      • Insert 2 docs with durability=MAJORITY
      • Update 1 doc with durability=MAJORITY
        ops_update count is 2 after step#2
        cbstats vbucket-details stats with replica=0. (Replica number doesn't matter here). We are getting same result with all replica values

      Cbstats output values:

      ops_create for default: 2
      ops_delete for default: 0
      ops_update for default: 2
      ops_reject for default: 0
      ops_get for default: 1
      rollback_item_count for default: 0
      sync_write_aborted_count for default: 0
      sync_write_committed_count for default: 3
      pending_writes for default: 0

      Error: Mismatch in ops_update stats. 2 != 1

      TAF test:

      epengine.basic_ops.basic_ops.test_doc_size.nodes_init=4,num_items=2,doc_size=1024,doc_op=update,replicas=0,durability=MAJORITY
      

      Note: This is similar to MB-34672

      Attachments

        For Gerrit Dashboard: MB-36504
        # Subject Branch Project Status CR V

        Activity

          People

            ashwin.govindarajulu Ashwin Govindarajulu
            ashwin.govindarajulu Ashwin Govindarajulu
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty