MB-36504: Ensure SyncWrites update opsUpdate / opsDelete correctly

Fix the calculation of opsUpdate & opsDelete for SyncWrites - only the
commit phase should update the count (not the prepare phase).

Change-Id: I6f74fc4c541c4ae006638f297c3c3f587ba10b29
Reviewed-on: http://review.couchbase.org/116504
Reviewed-by: Jim Walker <jim@couchbase.com>
Reviewed-by: Ben Huddleston <ben.huddleston@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>